--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </tr>
   </table>
   <hr>
-  <a href="Sites.html">Watch darling in the franxx here</a>
+  <a href="sites.html">Watch darling in the franxx here</a>
 
 
 </body>
